add some starter JS

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
       <button id="start-button">Start Game</button>
       <button id="restart-button">Restart</button>
     </div>
+    <div class="instructions">
+      <p>Game Instructions</p>
+    </div>
     <script src="./app.js" async defer></script>
   </body>
 </html>
