add if statement that changes background image depending on level

--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
         <p>Player Two:<span id="score-2"></span></p>
       </div>
       <div class="scores-div">
-        <h3 class="score-title">Rounds:</h3>
-        <p>Player One:<span id="round-1"></span></p>
-        <p>Player Two:<span id="round-2"></span></p>
+        <h3 class="score-title">
+          Round:
+          <span id="round-1"></span>
+        </h3>
       </div>
     </div>
     <canvas id="canvas-1"></canvas>
