add svg imgs, add score dom manipulation for player 1

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <h1 class="title">Mermaid Bubble Pop</h1>
+    <h1 class="title">
+      <img class="title-img" src="./images/shell_svg.svg" />Mermaid Bubble Pop<img class="title-img" src="./images/shell_svg.svg" />
+    </h1>
+
     <div class="game-score">
       <div class="scores-div">
         <h3 class="score-title">Scores:</h3>
