add button CSS, edit SVG file

--- a/index.html
+++ b/index.html
@@ -17,25 +17,29 @@
   </head>
   <body>
     <h1 class="title">
-      <img class="title-img" src="./images/shell_svg.svg" />Mermaid Bubble Pop<img class="title-img" src="./images/shell_svg.svg" />
+      <img class="title-img" src="./images/shell_svg.svg" />Mermaid Bubble
+      Pop<img class="title-img" src="./images/shell_svg.svg" />
     </h1>
 
     <div class="game-score">
+      <img class="title-img" src="./images/bubble_svg.svg" />
       <div class="scores-div">
         <h3 class="score-title">Scores:</h3>
         <p>Player One:<span id="score-1"></span></p>
         <p>Player Two:<span id="score-2"></span></p>
       </div>
+      <img class="title-img" src="./images/bubble_svg.svg" />
       <div class="scores-div">
         <h3 class="score-title">
           Round:
           <span id="round-1"></span>
         </h3>
       </div>
+      <img class="title-img" src="./images/bubble_svg.svg" />
     </div>
     <canvas id="canvas-1"></canvas>
     <div class="buttons-div">
-      <button id="start-button">Start Game</button>
+      <button id="start-button">Play</button>
       <button id="restart-button">Restart</button>
     </div>
     <div class="instructions">
