--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title></title>
-    <meta name="description" content="" />
+    <meta name="description" content="mermaid javascript game" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -26,7 +26,7 @@
       <div class="scores-div">
         <h3 class="score-title">Scores:</h3>
         <p>Player One:<span id="score-1"></span></p>
-        <p>Player Two:<span id="score-2"></span></p>
+        <!-- <p>Player Two:<span id="score-2"></span></p> -->
       </div>
       <img class="title-img" src="./images/bubble_svg.svg" />
       <div class="scores-div">
@@ -42,9 +42,9 @@
       <button id="start-button">Play</button>
       <button id="restart-button">Restart</button>
     </div>
-    <div class="instructions">
+    <!-- <div class="instructions">
       <p>Game Instructions</p>
-    </div>
+    </div> -->
     <script src="./app.js" async defer></script>
   </body>
 </html>
