--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="game-score">
       <img class="title-img" src="./images/bubble_svg.svg" />
       <div class="scores-div">
-        <h3 class="score-title">Scores:</h3>
+        <h3 class="score-title">Score:</h3>
         <p>Player One:<span id="score-1"></span></p>
         <!-- <p>Player Two:<span id="score-2"></span></p> -->
       </div>
